--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
           <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
           <div class="intro-text left-0 text-center bg-faded p-5 rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Fresh Coffee</span>
-              <span class="section-heading-lower">Worth Drinking</span>
+              <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
+              <span class="section-heading-lower">值得一嚐的嚴選風味</span>
             </h2>
-            <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
+            <p class="mb-3">嚴格把關生豆、烘焙，精挑細選每一顆咖啡豆，追求最高品質的風味感受。嘗試我們的咖啡，為日常生活增添「咖啡衝擊」！
             </p>
             <div class="intro-button mx-auto">
-              <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
+              <a class="btn btn-primary btn-xl" href="#">開始選購！</a>
             </div>
           </div>
         </div>
@@ -82,13 +82,26 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Our Promise</span>
-                <span class="section-heading-lower">To You</span>
+                <span class="section-heading-upper">Coffee Beans</span>
+                <span class="section-heading-lower">New Arrival</span>
               </h2>
-              <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+              <p class="mb-0">Comming soon!
+              </p>
             </div>
           </div>
         </div>
+        <div class="row">
+            <div class="col-xl-9 mx-auto">
+              <div class="cta-inner text-center rounded">
+                <h2 class="section-heading mb-4">
+                  <span class="section-heading-upper">Coffee Beans</span>
+                  <span class="section-heading-lower">Best Seller</span>
+                </h2>
+                <p class="mb-0">Comming soon!
+                </p>
+              </div>
+            </div>
+          </div>
       </div>
     </section>
 
