--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
             </div>
           </div>
         </div>
-        <div class="row">
+      <div class="container">
+          <div class="row">
             <div class="col-xl-9 mx-auto">
               <div class="cta-inner text-center rounded">
                 <h2 class="section-heading mb-4">
@@ -102,6 +103,7 @@
               </div>
             </div>
           </div>
+        </div>
       </div>
     </section>
 
