--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
             </div>
           </div>
         </div>
-      <div class="container">
+        </div>
+    </section>
+    <section class="page-section cta">
+        <div class="container">
           <div class="row">
             <div class="col-xl-9 mx-auto">
               <div class="cta-inner text-center rounded">
