Edit index page

--- a/index.html
+++ b/index.html
@@ -1,125 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
+  <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/business-casual.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/business-casual.min.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">Fresh Roasted Coffee Beans</span>
-      <span class="site-heading-lower">Coffee Punch</span>
-    </h1>
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <img src="img/coffee punch.png" alt="" class="rounded-0">
+    <span class="site-heading-upper text-primary mb-3">Fresh Roasted Coffee Beans</span>
+    <span class="site-heading-lower">Coffee Punch</span>
+  </h1>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Coffee Punch</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
-            </li>
-          </ul>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Coffee Punch</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item active px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="page-section clearfix">
+    <div class="container">
+      <div class="intro">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
+        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+          <h2 class="section-heading mb-4">
+            <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
+            <span class="section-heading-lower">值得一嚐的風味</span>
+          </h2>
+          <p class="mb-3">嚴格把關生豆、烘焙，精挑細選每一顆咖啡豆，追求最高品質的嗅味覺感受。如果你還沒體驗過「咖啡衝擊」，一定要試試我們的產品！
+          </p>
+          <div class="intro-button mx-auto">
+            <a class="btn btn-primary btn-xl" href="#">開始選購！</a>
+          </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </section>
 
-    <section class="page-section clearfix">
-      <div class="container">
-        <div class="intro">
-          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
-          <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+  <section class="page-section cta">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
-              <span class="section-heading-lower">值得一嚐的嚴選風味</span>
+              <span class="section-heading-upper">Coffee Beans</span>
+              <span class="section-heading-lower">New Arrival</span>
             </h2>
-            <p class="mb-3">嚴格把關生豆、烘焙，精挑細選每一顆咖啡豆，追求最高品質的風味感受。嘗試我們的咖啡，為日常生活增添「咖啡衝擊」！
-            </p>
-            <div class="intro-button mx-auto">
-              <a class="btn btn-primary btn-xl" href="#">開始選購！</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="page-section cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 mx-auto">
-            <div class="cta-inner text-center rounded">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Coffee Beans</span>
-                <span class="section-heading-lower">New Arrival</span>
-              </h2>
-              <p class="mb-0">Comming soon!
-              </p>
-            </div>
-          </div>
-        </div>
-        </div>
-    </section>
-    <section class="page-section cta">
-        <div class="container">
-          <div class="row">
-            <div class="col-xl-9 mx-auto">
-              <div class="cta-inner text-center rounded">
-                <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Coffee Beans</span>
-                  <span class="section-heading-lower">Best Seller</span>
-                </h2>
-                <p class="mb-0">Comming soon!
-                </p>
+            <div class="row">
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <a href="#">
+                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="#">耶加雪啡 杜梅索 日曬</a>
+                    </h4>
+                    <h5>$300/0.5lb</h5>
+                    <p class="card-text">Descriptions</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">★ ★ ★ ★ ☆</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <a href="#">
+                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="#">耶加雪啡 吉吉莎 水洗</a>
+                    </h4>
+                    <h5>$320/0.5lb</h5>
+                    <p class="card-text">Descriptions</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">★ ★ ★ ★ ☆</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <a href="#">
+                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="#">Panama Geisha</a>
+                    </h4>
+                    <h5>$350/100g</h5>
+                    <p class="card-text">茉莉花香、柑橘、蜂蜜甜感
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">★ ★ ★ ★ ★</small>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-
-    <footer class="footer text-faded text-center py-5">
-      <div class="container">
-        <p class="m-0 small">Copyright &copy; Coffee Punch 2018</p>
+      <div class="row">
+          <div class="col-xl-9 mx-auto"><p></p></div>
       </div>
-    </footer>
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Coffee Beans</span>
+              <span class="section-heading-lower">Best Seller</span>
+            </h2>
+            <p class="mb-0">Coming soon!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <footer class="footer text-faded text-center py-5">
+    <div class="container">
+      <p class="m-0 small">Copyright &copy; Coffee Punch 2018</p>
+    </div>
+  </footer>
 
-  </body>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
 
 </html>
