--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
-            <span class="section-heading-lower">值得一嚐的風味</span>
+            <span class="section-heading-lower">值得您的品味</span>
           </h2>
-          <p class="mb-3">嚴格把關生豆、烘焙，精挑細選每一顆咖啡豆，追求最高品質的嗅味覺感受。如果你還沒體驗過「咖啡衝擊」，一定要試試我們的產品！
+          <p class="mb-3">嚴格把關生豆、烘焙，精挑細選每一顆咖啡豆，追求最高品質的嗅味覺感受。如果還沒體驗過「咖啡衝擊」，一定要試試我們的產品！
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#">開始選購！</a>
