--- a/index.html
+++ b/index.html
@@ -19,38 +19,32 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/business-casual.min.css" rel="stylesheet">
+  <link href="css/business-casual.css" rel="stylesheet">
 
 </head>
 
 <body>
-
-  <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <img src="img/coffee punch.png" alt="" class="rounded-0">
-    <span class="site-heading-upper text-primary mb-3">Fresh Roasted Coffee Beans</span>
-    <span class="site-heading-lower">Coffee Punch</span>
-  </h1>
-
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4 fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Coffee Punch</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#page-top">
+        <img src="img/coffee punch logo.png" style="width: 40px;"> Coffee Punch
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html">Home
-              <span class="sr-only">(current)</span>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded js-scroll-trigger" href="#page-top">Home
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <a class="nav-link text-uppercase text-expanded js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <a class="nav-link text-uppercase text-expanded js-scroll-trigger" href="#products">Products</a>
           </li>
           <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
@@ -60,6 +54,15 @@
     </div>
   </nav>
 
+  <!-- Header -->
+  <div class="row" style="height: 20px;" id="page-top"></div>
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <img src="img/coffee punch.png" alt="" class="rounded-0">
+    <span class="site-heading-upper text-primary mb-3">Fresh Roasted Coffee Beans</span>
+    <span class="site-heading-lower">Coffee Punch</span>
+  </h1>
+
+  <!-- Main section -->
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
@@ -72,7 +75,7 @@
           <p class="mb-3">嚴格把關生豆、烘焙，精挑細選每一顆咖啡豆，追求最高品質的嗅味覺感受。如果還沒體驗過「咖啡衝擊」，一定要試試我們的產品！
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">開始選購！</a>
+            <a class="btn btn-primary btn-xl" href="store.html">開始選購！</a>
           </div>
         </div>
       </div>
@@ -81,13 +84,16 @@
 
   <section class="page-section cta">
     <div class="container">
+      <!-- New arrival row -->
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
+            <!-- Header -->
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Coffee Beans</span>
               <span class="section-heading-lower">New Arrival</span>
             </h2>
+            <!-- Item row -->
             <div class="row">
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
@@ -145,18 +151,171 @@
           </div>
         </div>
       </div>
+      <!-- Dummy row -->
       <div class="row">
-          <div class="col-xl-9 mx-auto"><p></p></div>
+        <div class="col-xl-9 mx-auto">
+          <p></p>
+        </div>
       </div>
+      <!-- Best seller row -->
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
+            <!-- Header -->
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Coffee Beans</span>
               <span class="section-heading-lower">Best Seller</span>
             </h2>
-            <p class="mb-0">Coming soon!
-            </p>
+            <!-- Item row -->
+            <div class="row">
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <a href="#">
+                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="#">耶加雪啡 杜梅索 日曬</a>
+                    </h4>
+                    <h5>$300/0.5lb</h5>
+                    <p class="card-text">Descriptions</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">★ ★ ★ ★ ☆</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <a href="#">
+                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="#">耶加雪啡 吉吉莎 水洗</a>
+                    </h4>
+                    <h5>$320/0.5lb</h5>
+                    <p class="card-text">Descriptions</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">★ ★ ★ ★ ☆</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <a href="#">
+                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="#">Panama Geisha</a>
+                    </h4>
+                    <h5>$350/100g</h5>
+                    <p class="card-text">茉莉花香、柑橘、蜂蜜甜感
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">★ ★ ★ ★ ★</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About section-->
+  <section class="page-section about-heading" id="about">
+    <div class="container">
+      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
+      <div class="about-heading-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5">
+              <h2 class="section-heading mb-4">
+                <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
+                <span class="section-heading-lower">About Our Cafe</span>
+              </h2>
+              <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan
+                farmers in various regions of South and Central America. We are dedicated to travelling the world, finding
+                the best coffee, and bringing back to you here in our cafe.</p>
+              <p class="mb-0">We guarantee that you will fall in
+                <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for
+                your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Products section -->
+  <section class="page-section" id="products">
+    <div class="container">
+      <div class="product-item">
+        <div class="product-item-title d-flex">
+          <div class="bg-faded p-5 d-flex ml-auto rounded">
+            <h2 class="section-heading mb-0">
+              <span class="section-heading-upper">Blended to Perfection</span>
+              <span class="section-heading-lower">Coffees &amp; Teas</span>
+            </h2>
+          </div>
+        </div>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+        <div class="product-item-description d-flex mr-auto">
+          <div class="bg-faded p-5 rounded">
+            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be
+              an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea,
+              or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="page-section">
+    <div class="container">
+      <div class="product-item">
+        <div class="product-item-title d-flex">
+          <div class="bg-faded p-5 d-flex mr-auto rounded">
+            <h2 class="section-heading mb-0">
+              <span class="section-heading-upper">Delicious Treats, Good Eats</span>
+              <span class="section-heading-lower">Bakery &amp; Kitchen</span>
+            </h2>
+          </div>
+        </div>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
+        <div class="product-item-description d-flex ml-auto">
+          <div class="bg-faded p-5 rounded">
+            <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime.
+              We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty
+              goods.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="page-section">
+    <div class="container">
+      <div class="product-item">
+        <div class="product-item-title d-flex">
+          <div class="bg-faded p-5 d-flex ml-auto rounded">
+            <h2 class="section-heading mb-0">
+              <span class="section-heading-upper">From Around the World</span>
+              <span class="section-heading-lower">Bulk Speciality Blends</span>
+            </h2>
+          </div>
+        </div>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
+        <div class="product-item-description d-flex mr-auto">
+          <div class="bg-faded p-5 rounded">
+            <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always
+              find new blends from around the world, mainly from regions in Central and South America. We sell our blends
+              in smaller to large bulk quantities. Please visit us in person for more details.</p>
           </div>
         </div>
       </div>
@@ -173,6 +332,11 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/new-age.js"></script>
 </body>
 
 </html>
