--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
   </section>
 
   <!-- About section-->
-  <section class="page-section about-heading" id="about">
+  <div class="row" id="about"></div>
+  <section class="page-section about-heading">
     <div class="container">
       <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
       <div class="about-heading-content">
@@ -253,7 +254,8 @@
   </section>
 
   <!-- Products section -->
-  <section class="page-section" id="products">
+  <div class="row" id="products"></div>
+  <section class="page-section">
     <div class="container">
       <div class="product-item">
         <div class="product-item-title d-flex">
