--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="http://placehold.it/1500x1000?text=Intro" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
@@ -98,7 +98,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -115,7 +115,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -132,7 +132,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                    <img class="card-img-top" src="http://placehold.it/200x200?text=Panama+Geisha" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -171,7 +171,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -188,7 +188,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -205,7 +205,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200" alt="">
+                    <img class="card-img-top" src="http://placehold.it/200x200?text=Panama+Geisha" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -231,7 +231,7 @@
   <div class="row" id="about"></div>
   <section class="page-section about-heading">
     <div class="container">
-      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
+      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="http://placehold.it/1900x710?text=About" alt="">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
@@ -266,7 +266,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="http://placehold.it/900x700?text=Products" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be
@@ -289,7 +289,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="http://placehold.it/900x700?text=Products" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime.
@@ -312,7 +312,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="http://placehold.it/900x700?text=Products" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always
