Update main page

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
+                    <img class="card-img-top" src="http://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
-                      <a href="#">耶加雪啡 杜梅索 日曬</a>
+                      <a href="#">耶加雪菲 杜梅索 G1 日曬</a>
                     </h4>
                     <h5>$300/0.5lb</h5>
-                    <p class="card-text">Descriptions</p>
+                    <p class="card-text">葡萄、甜橙與桃子果乾 、可可，香氣飽滿、乾淨、濃郁厚實口感</p>
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">★ ★ ★ ★ ☆</small>
@@ -115,14 +115,14 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
+                    <img class="card-img-top" src="http://placehold.it/250x250?text=Sidamo+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
-                      <a href="#">耶加雪啡 吉吉莎 水洗</a>
+                      <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
                     </h4>
                     <h5>$320/0.5lb</h5>
-                    <p class="card-text">Descriptions</p>
+                    <p class="card-text">甜桃，花香調混和蜜柑的香氣，養樂多酸甜搭上綠茶口感，中溫口感越趨柔軟滑口，尾段甜蜜細緻</p>
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">★ ★ ★ ★ ☆</small>
@@ -132,14 +132,14 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200?text=Panama+Geisha" alt="">
+                    <img class="card-img-top" src="http://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
-                      <a href="#">Panama Geisha</a>
+                      <a href="#">巴拿馬 翡翠莊園 藍標藝妓 水洗</a>
                     </h4>
                     <h5>$350/100g</h5>
-                    <p class="card-text">茉莉花香、柑橘、蜂蜜甜感
+                    <p class="card-text">花香、蜂蜜甜、佛手柑、清新莓果調、櫻桃，餘韻細緻、油脂滑膩
                     </p>
                   </div>
                   <div class="card-footer">
@@ -171,13 +171,30 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
+                    <img class="card-img-top" src="http://placehold.it/250x250?text=Colombia+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
-                      <a href="#">耶加雪啡 杜梅索 日曬</a>
+                      <a href="#">哥倫比亞 娜玲瓏 青山特選 水洗</a>
                     </h4>
                     <h5>$300/0.5lb</h5>
+                    <p class="card-text">青蘋果，多汁，明亮且溫潤的酸質，酸甜平衡，菸草，黑巧克力，尾韻甜度持久</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">★ ★ ★ ★ ☆</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <a href="#">
+                    <img class="card-img-top" src="http://placehold.it/250x250?text=Colombia+Washed" alt="">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="#">哥倫比亞 薇拉省 水洗</a>
+                    </h4>
+                    <h5>$250/0.5lb</h5>
                     <p class="card-text">Descriptions</p>
                   </div>
                   <div class="card-footer">
@@ -188,35 +205,17 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200?text=Yirgacheffe" alt="">
+                    <img class="card-img-top" src="http://placehold.it/250x250?text=Sidamo+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
-                      <a href="#">耶加雪啡 吉吉莎 水洗</a>
+                      <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
                     </h4>
                     <h5>$320/0.5lb</h5>
-                    <p class="card-text">Descriptions</p>
+                    <p class="card-text">甜桃，花香調混和蜜柑的香氣，養樂多酸甜搭上綠茶口感，中溫口感越趨柔軟滑口，尾段甜蜜細緻</p>
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">★ ★ ★ ★ ☆</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/200x200?text=Panama+Geisha" alt="">
-                  </a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">Panama Geisha</a>
-                    </h4>
-                    <h5>$350/100g</h5>
-                    <p class="card-text">茉莉花香、柑橘、蜂蜜甜感
-                    </p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">★ ★ ★ ★ ★</small>
                   </div>
                 </div>
               </div>
@@ -238,14 +237,10 @@
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
                 <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                <span class="section-heading-lower">About Our Cafe</span>
+                <span class="section-heading-lower">About Coffee Punch</span>
               </h2>
-              <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan
-                farmers in various regions of South and Central America. We are dedicated to travelling the world, finding
-                the best coffee, and bringing back to you here in our cafe.</p>
-              <p class="mb-0">We guarantee that you will fall in
-                <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for
-                your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+              <p class="mb-0">「Coffee Punch」來自交大一群熱愛咖啡的年輕人。</p>
+			  <p class="mb-0">我們生產新鮮烘焙咖啡豆，追求咖啡風味的香醇平衡。</p>
             </div>
           </div>
         </div>
@@ -261,63 +256,15 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Blended to Perfection</span>
-              <span class="section-heading-lower">Coffees &amp; Teas</span>
+              <span class="section-heading-upper">Roasted to Perfection</span>
+              <span class="section-heading-lower">Coffees</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="http://placehold.it/900x700?text=Products" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be
-              an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea,
-              or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="page-section">
-    <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex mr-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-              <span class="section-heading-lower">Bakery &amp; Kitchen</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="http://placehold.it/900x700?text=Products" alt="">
-        <div class="product-item-description d-flex ml-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime.
-              We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty
-              goods.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="page-section">
-    <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex ml-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">From Around the World</span>
-              <span class="section-heading-lower">Bulk Speciality Blends</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="http://placehold.it/900x700?text=Products" alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always
-              find new blends from around the world, mainly from regions in Central and South America. We sell our blends
-              in smaller to large bulk quantities. Please visit us in person for more details.</p>
+            <p class="mb-0">我們對咖啡豆的生產萬分自豪，以熱忱又嚴謹的態度選豆、挑豆、烘焙。我們保證能讓你沖煮的每杯咖啡都值得細細品嘗。</p>
           </div>
         </div>
       </div>
