--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                       <a href="#">哥倫比亞 薇拉省 水洗</a>
                     </h4>
                     <h5>$250/0.5lb</h5>
-                    <p class="card-text">Descriptions</p>
+                    <p class="card-text">核果味、香草、菸草、黑巧克力餘韻、豐富焦糖，口感濃郁</p>
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">★ ★ ★ ★ ☆</small>
