--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
+  <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,8 +27,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4 fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#page-top">
-        <img src="img/coffee punch logo.png" style="width: 40px;"> Coffee Punch
+      <a class="navbar-brand text-uppercase font-weight-bold d-lg-none" href="#page-top">
+        <img src="img/coffee punch logo.png" width="30" height="30"> Coffee Punch
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -37,17 +37,17 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded js-scroll-trigger" href="#page-top">Home
+            <a class="nav-link text-uppercase js-scroll-trigger" href="#page-top">Home
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link text-uppercase js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded js-scroll-trigger" href="#products">Products</a>
+            <a class="nav-link text-uppercase js-scroll-trigger" href="#products">Products</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <a class="nav-link text-uppercase" href="store.html">Store</a>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="http://placehold.it/1500x1000?text=Intro" alt="">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="https://placehold.it/1500x1000?text=Intro" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
@@ -98,7 +98,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
+                    <img class="card-img-top" src="https://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -115,7 +115,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/250x250?text=Sidamo+Washed" alt="">
+                    <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -132,7 +132,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
+                    <img class="card-img-top" src="https://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -171,7 +171,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/250x250?text=Colombia+Washed" alt="">
+                    <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -188,7 +188,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/250x250?text=Colombia+Washed" alt="">
+                    <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -205,7 +205,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                   <a href="#">
-                    <img class="card-img-top" src="http://placehold.it/250x250?text=Sidamo+Washed" alt="">
+                    <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
                   </a>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -230,7 +230,7 @@
   <div class="row" id="about"></div>
   <section class="page-section about-heading">
     <div class="container">
-      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="http://placehold.it/1900x710?text=About" alt="">
+      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="https://placehold.it/1900x710?text=About" alt="">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
@@ -261,7 +261,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="http://placehold.it/900x700?text=Products" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://placehold.it/900x700?text=Products" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">我們對咖啡豆的生產萬分自豪，以熱忱又嚴謹的態度選豆、挑豆、烘焙。我們保證能讓你沖煮的每杯咖啡都值得細細品嘗。</p>
