--- a/store.html
+++ b/store.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html#page-top">Home
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Home
             </a>
           </li>
           <li class="nav-item px-lg-4">
